--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/EnemyDeaD/ConventerValutes",
+  "homepage": "https://enemydead.github.io/Conventer-Valutes/",
   "dependencies": {
+    "@material-ui/core": "^4.9.14",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
