--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,24 +4,20 @@
     "es6": true
   },
   "extends": ["react-app", "prettier"],
-  "parser": "@typescript-eslint/parser",
-  "plugins": ["react-hooks", "react", "prettier"],
+  "plugins": ["react", "prettier"],
   "parserOptions": {
     "ecmaVersion": 2018
   },
   "rules": {
-    "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn",
     "prettier/prettier": [
       "error",
       {
-        "printWidth": 90,
+        "printWidth": 80,
         "trailingComma": "es5",
         "semi": false,
         "jsxSingleQuote": true,
         "singleQuote": true,
-        "useTabs": true,
-        "endOfLine": "auto"
+        "useTabs": true
       }
     ]
   }
